gcc/testsuite/g++.dg/modules/atom-decl-1.C

int i;

module thing; // { dg-error "expected" }
